# data-structures-and-algorithms

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ruff.yml
1 - Two Sum/: README.md  solution.py
217 - Contains Duplicate/: README.md  solution.py
242 - Valid Anagram/: README.md  solution.py
