[project]
name = "data-structures-and-algorithms"
version = "0.0.0"
description = "My solutions for LeetCode DSA problems."
license = "MIT"
authors = [
    { name="Sayan Bhattacharyya", email="sayan@sn1f3rt.dev" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.3",
]

[tool.ruff]
line-length = 85
target-version = "py313"

[tool.ruff.lint.isort]
section-order = ["future", "typing", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"typing" = ["typing"]
